@@ -1,4 +1,5 @@
 4.0.7
+ * Better handle null state in Gossip schema migration to avoid NPE (CASSANDRA-17864)
  * Avoid getting hanging repairs due to repair message timeouts (CASSANDRA-17613)
  * Prevent infinite loop in repair coordinator on FailSession (CASSANDRA-17834)
 Merged from 3.11:
